--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
   </head>
-
   <body>
+
+    <table>
+
+      <thead>
+        <th>Municipality<th>
+        <th>Population<th>
+      <thead>
+
+      <tbody>
+
+
+      </tbody>
+
+    </table>
+
+
     <script src="src/index.js"></script>
   </body>
 </html>
