--- a/index.html
+++ b/index.html
@@ -5,21 +5,17 @@
     <meta charset="UTF-8" />
   </head>
   <body>
+    <div class="center">
+      <h1>Municipality employment statistics in Finland</h1>
+      <table>
+        <thead>
+          <th>Municipality</th>
+          <th>Population</th>
+        </thead>
 
-    <table>
-
-      <thead>
-        <th>Municipality<th>
-        <th>Population<th>
-      <thead>
-
-      <tbody>
-
-
-      </tbody>
-
-    </table>
-
+        <tbody></tbody>
+      </table>
+    </div>
 
     <script src="src/index.js"></script>
   </body>
