--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <thead>
           <th>Municipality</th>
           <th>Population</th>
+          <th>Employment amount</th>
+          <th>Employment-%</th>
         </thead>
 
         <tbody></tbody>
